# lacrei-saude-api

./: .coveragerc  .env.example  .flake8  .gitignore  COVERAGE_REPORT.md  DOCKER_README.md  Dockerfile  Makefile  PLANO_DESENVOLVIMENTO.md  README.md  conftest.py  coverage_custom.css  coverage_scripts.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: basic-ci.yml  ci.yml  quality.yml  quality.yml.disabled
authentication/: __init__.py  admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  test_views_permissions.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
consultas/: admin.py  apps.py  filters.py  models.py  serializers.py  test_api.py  test_models.py  test_serializers.py  test_serializers_old.py  test_views_coverage.py  urls.py  views.py
consultas/migrations/: 0001_initial.py
docker/init-db/: 01-init.sql
fixtures/: test_data.json
lacrei_saude/: asgi.py  exceptions.py  logging_middleware.py  middleware.py  models.py  monitoring_views.py  pagination.py  permissions.py  security.py  security_headers.py  security_views.py  serializers.py  settings.py  settings_test.py  test_authentication.py  test_edge_cases.py  test_error_handling.py  test_input_sanitization.py  test_middleware_security.py  test_owasp_top10.py  test_rate_limiting.py  test_security_authorization.py  test_security_injection.py  test_session_security.py  test_validators.py  urls.py  validators.py  wsgi.py
profissionais/: admin.py  apps.py  filters.py  models.py  serializers.py  test_api.py  test_models.py  test_serializers.py  urls.py  views.py
profissionais/migrations/: 0001_initial.py
