[tool.poetry]
name = "lacrei-saude-api"
version = "0.1.0"
description = "API RESTful para gerenciamento de consultas médicas - Lacrei Saúde"
authors = ["Lucas Felipe dos Anjos <lfanjosus@gmail.com>"]
readme = "README.md"
packages = [{include = "lacrei_saude"}, {include = "authentication"}, {include = "profissionais"}, {include = "consultas"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.1"
djangorestframework = "^3.16.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.11"
django-cors-headers = "^4.9.0"
django-filter = "^24.3"
drf-yasg = "^1.21.7"
djangorestframework-simplejwt = "^5.3.1"
django-ratelimit = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-django = "^4.11.1"
coverage = "^7.13.2"
black = "^26.1.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
pytest-cov = "^6.0.0"
safety = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 127
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | migrations
  | staticfiles
  | media
  | htmlcov
  | dist
  | build
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/migrations/*", 
    "*/venv/*", 
    "*/env/*", 
    "*/.pytest_cache/*",
    "*/staticfiles/*",
    "*/media/*",
    "*/htmlcov/*"
]
known_django = "django"
known_first_party = ["lacrei_saude", "authentication", "profissionais", "consultas"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

# Coverage configuration
[tool.coverage.run]
source = "."
branch = true
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "*/test_*",
    "manage.py",
    "*/settings/*",
    "*/.*",
    "conftest.py",
    "coverage_scripts.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"
title = "Lacrei Saúde API - Coverage Report"

# Pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lacrei_saude.settings_test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short", 
    "--strict-markers",
    "--reuse-db"
]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::DeprecationWarning"
]
testpaths = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
    "models: marks tests for models",
    "views: marks tests for views",
    "serializers: marks tests for serializers",
    "validators: marks tests for validators",
    "security: marks tests for security features"
]